Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123430

QBluetoothSocket::errorOccured is not emitted in certain circumstances

    XMLWordPrintable

Details

    • macOS
    • c38203445 (dev), 05b8398aa (dev), 1c0dd0340 (6.8), e21e9bbaa (6.8), e2693c831 (6.7), b60263ceb (6.7), 031007fc8 (tqtc/lts-6.5), 1f1daf6b5 (tqtc/lts-6.5)
    • Foundation Sprint 115

    Description

      One circumstance is when trying to connect to a device whose Bluetooth is turned off. For example, on Ubuntu QBluetoothSocket::errorOccured should be triggered and tell us
      "Cannot connect to remote profile". But nothing happens on macOS.

      Also from original reporter:
      "In Windows and Android, the signal errorOccurred is properly emitted when, for example, the device I am connected to is shut down. However, this signal is not emitted in MacOs when performing the same actions to force the error".

      Attachments

        For Gerrit Dashboard: QTBUG-123430
        # Subject Branch Project Status CR V

        Activity

          People

            ivan.solovev Ivan Solovev
            luqiaochen Luqiao Chen
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: